# cmake_skeleton

./: .gitignore  README.md
Child/: CMakeLists.txt  plugind.cpp  plugind.hpp  plugind_tests.cpp
MyProject/: CMakeLists.txt
MyProject/MyExecutable/: CMakeLists.txt  main.cpp
MyProject/MyLibrary/: CMakeLists.txt  mylibrary.cpp
MyProject/Plugins/: CMakeLists.txt
MyProject/Plugins/PluginA/: CMakeLists.txt  plugina.cpp  plugina.hpp  plugina_tests.cpp
MyProject/Plugins/PluginB/: CMakeLists.txt  pluginb.cpp  pluginb.hpp
MyProject/cmake/: AddExternalPlugin.cmake  AddPlugin.cmake  ExportPluginTargets.cmake  ExportTargets.cmake  MakeConfigAndTargets.cmake  MyProjectConfig.cmake.in
Parent/: CMakeLists.txt
Parent/MyExecutable/: CMakeLists.txt
Parent/MyLibrary/: CMakeLists.txt  mylibrary.hpp
Parent/Plugins/: CMakeLists.txt
Parent/Plugins/PluginA/: CMakeLists.txt  plugina_tests.cpp
Parent/Plugins/PluginB/: CMakeLists.txt  pluginb.cpp  pluginb.hpp
Parent/cmake/: AddExternalPlugin.cmake  AddInternalPlugin.cmake  MakeConfigAndTargets.cmake  ParentConfig.cmake.in
UserPlugin/: CMakeLists.txt  pluginc.cpp  userplugin.cpp  userplugin.hpp  userplugin_tests.cpp
